<resources>
    <string name="app_name">Proyecto1PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_msg">¡Bienvenido!</string>
    <string name="login_msg2">Inicia sesión para continuar</string>
    <string name="introduce_tu_correo_electr_nico">Introduce tu correo electrónico</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?,</string>
    <string name="registrate">!Registrate!</string>
    <string name="registrateTxt">¡Registrate!</string>
    <string name="ingresa_tu_correo_electr_nico">Ingresa tu correo electrónico</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="username">\@username</string>
    <string name="otras_configuraciones">Otras configuraciones</string>
    <string name="actuilizar_datos">Actuilizar datos</string>
    <string name="enfoque_del_usuario">Enfoque del usuario</string>
    <string name="masa_del_usuario">Masa del usuario</string>
    <string name="peso_inicial">Peso Inicial:</string>
    <string name="food_name">Food Name</string>
    <string name="calories">Calories</string>
    <string name="steps_for_elaboration">Steps for elaboration</string>
    <string name="description">Description</string>
    <string name="busca_tu_comida_aqu">Busca tu comida aquí</string>
    <string name="buscar">Buscar</string>
    <string name="calories2">Calories</string>
    <string name="_0">0</string>
    <string name="remaining">Remaining</string>
    <string name="consumed">Consumed</string>
    <string name="burned">Burned</string>
    <string name="logo_elevate">logo Elevate</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="inicia_sesi_n_o_reg_strate">Inicia sesión o Regístrate</string>
    <string name="porcentaje_de_grasa">Porcentaje de grasa</string>
    <string name="altura_del_usuario">Altura del usuario</string>
    <string name="edad_del_usuario">Edad del usuario</string>
    <string name="meta_inicial">Meta Inicial</string>
    <string name="confirmar">confirmar</string>
    <string name="racha">Racha:</string>
    <string name="_14_d_as">14 días</string>
    <string name="kg_perdidos">KG perdidos</string>
    <string name="_5">5</string>
    <string name="objetivos_del_usuario">Objetivos del usuario</string>
    <string name="objetivos_principales">Objetivos Principales</string>
    <string name="enfoque_actual">Enfoque Actual:</string>
    <string name="peso_actual">Peso Actual:</string>
    <string name="peso_deseado">Peso Deseado:</string>
    <string name="objetivo_semanal">Objetivo Semanal:</string>
    <string name="nivel_actividad">Nivel Actividad:</string>
    <string name="objetivos_de_bienestar_y_forma_f_sica">Objetivos de Bienestar y forma física</string>
    <string name="sesiones_por_semana">Sesiones por semana:</string>
    <string name="minutos_por_sesi_n">Minutos por sesión:</string>
    <string name="workout_name">Workout Name</string>
    <string name="reps">Reps</string>
    <string name="steps">Steps</string>
    <string name="description2">Description</string>
    <string name="imagen_de_la_comida">imagen de la comida</string>
    <string name="food_name2">Food Name</string>
    <string name="calories3">Calories</string>
    <string name="workout_name2">Workout Name</string>
    <string name="intensity">Intensity</string>


    <string-array name="enfoque_del_usuario_array">
        <item>Perder peso</item>
        <item>Mantener peso</item>
        <item>Ganar peso</item>
    </string-array>

    <string-array name="masa_del_usuario_array">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

    <string-array name="porcentaje_de_grasa_array">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

    <string-array name="altura_del_usuario_array">
        <item>1.40</item>
        <item>1.50</item>
        <item>1.60</item>
        <item>1.70</item>
        <item>1.80</item>
        <item>1.90</item>
        <item>2.00</item>
        <item>2.10</item>
    </string-array>

    <string-array name="edad_del_usuario_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string-array name="metainiciar_array">
        <item>Perder peso</item>
        <item>Mantener peso</item>
        <item>Ganar peso</item>
    </string-array>


</resources>