<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente_verde_azulado"
    tools:context=".ui.fragments.usuario.UsuarioMain">

    <ImageView
        android:id="@+id/usuariomain_fotoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMuyMuyGrande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/usuariomain_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginEstandar"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"


        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeGrande"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_fotoUsuario" />

    <TextView
        android:id="@+id/usuariomain_rachaFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin50"
        android:layout_marginTop="@dimen/marginPeque"
        android:text="@string/racha"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeMaso"
        app:layout_constraintStart_toStartOf="@+id/usuariomain_username"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_username" />

    <TextView
        android:id="@+id/usuariomain_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin50"
        android:text="@string/_14_d_as"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeMaso"
        app:layout_constraintEnd_toEndOf="@+id/usuariomain_username"
        app:layout_constraintTop_toTopOf="@+id/usuariomain_rachaFijo" />

    <TextView
        android:id="@+id/usuariomain_kgperdidosFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginPeque"
        android:text="@string/kg_perdidos"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeMaso"

        app:layout_constraintStart_toStartOf="@+id/usuariomain_rachaFijo"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_rachaFijo" />

    <TextView
        android:id="@+id/usuariomain_kgperdidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/sizeMaso"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/usuariomain_dias"
        app:layout_constraintTop_toTopOf="@+id/usuariomain_kgperdidosFijo" />

    <ImageButton
        android:id="@+id/usuariomain_iconoObjetivoUsuario"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintStart_toStartOf="@+id/usuariomain_username"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_kgperdidosFijo" />

    <TextView
        android:id="@+id/usuariomain_objetivoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetivos_del_usuario"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeMediano"
        app:layout_constraintBottom_toBottomOf="@+id/usuariomain_iconoObjetivoUsuario"
        app:layout_constraintEnd_toEndOf="@+id/usuariomain_username"
        app:layout_constraintTop_toTopOf="@+id/usuariomain_iconoObjetivoUsuario" />

    <ImageButton
        android:id="@+id/usuariomain_iconoActualizarDatos"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintStart_toStartOf="@+id/usuariomain_iconoObjetivoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_iconoObjetivoUsuario" />

    <TextView
        android:id="@+id/usuariomain_actualizarDatos"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actuilizar_datos"
        android:textColor="@color/white"

        android:textSize="@dimen/sizeMediano"
        app:layout_constraintBottom_toBottomOf="@+id/usuariomain_iconoActualizarDatos"

        app:layout_constraintStart_toStartOf="@+id/usuariomain_objetivoUsuario"
        app:layout_constraintTop_toTopOf="@+id/usuariomain_iconoActualizarDatos"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/usuariomain_iconoConfiguraciones"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintStart_toStartOf="@+id/usuariomain_iconoActualizarDatos"
        app:layout_constraintTop_toBottomOf="@+id/usuariomain_iconoActualizarDatos" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otras_configuraciones"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeMediano"

        app:layout_constraintBottom_toBottomOf="@+id/usuariomain_iconoConfiguraciones"
        app:layout_constraintStart_toStartOf="@+id/usuariomain_objetivoUsuario"
        app:layout_constraintTop_toTopOf="@+id/usuariomain_iconoConfiguraciones"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>