<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.alimentacion.Details.AlimentacionDetails">


    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ProgressBar_alimentacionDetails"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/marginPeque"
        android:background="@drawable/background_workout_details"
        android:backgroundTint="@color/gradienteCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_FoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginPeque"
            android:fontFamily="sans-serif-medium"
            android:text="@string/food_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sizeGrande"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/text_FoodCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginPeque"
            android:layout_marginTop="@dimen/marginMuyPeque"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:text="@string/calories"
            android:textSize="@dimen/sizePeque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_FoodName" />

        <ImageView
            android:id="@+id/image_food"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/marginPeque"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_FoodCalories"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_Foodrecipe_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginPeque"
            android:layout_marginTop="@dimen/marginPeque"
            android:fontFamily="sans-serif-medium"
            android:text="@string/steps_for_elaboration"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_food"

            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/marginPeque"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_Foodrecipe_steps" />

        <TextView
            android:id="@+id/text_FoodDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginPeque"
            android:layout_marginTop="@dimen/marginPeque"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/description"
            android:textSize="@dimen/sizePeque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>